--- a/backend/ft/src/main/resources/application.properties
+++ b/backend/ft/src/main/resources/application.properties
@@ -1,16 +1,24 @@
+# Osnovne postavke aplikacije
 spring.application.name=finance_tracker
-spring.datasource.url=jdbc:mariadb://localhost:3306/ft_base
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MariaDBDialect
-logging.level.org.springframework.security=TRACE
+
+# PostgreSQL konfiguracija
+spring.datasource.url=jdbc:postgresql://localhost:5432/baza
+spring.datasource.username=ana
+spring.datasource.password=1234
+
+# Hibernate/JPA postavke
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql=TRACE
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Logovanje
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.security=TRACE
+
+# JWT postavke
 jwt.secret=your_secure_secret_key_here_at_least_32_chars
 jwt.expiration=36000000
