add transaction controller, service and repository, entity

--- a/backend/ft/src/main/resources/application.properties
+++ b/backend/ft/src/main/resources/application.properties
@@ -1,24 +1,23 @@
-# Osnovne postavke aplikacije
 spring.application.name=finance_tracker
 
-# PostgreSQL konfiguracija
+# Postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/baza
 spring.datasource.username=ana
 spring.datasource.password=1234
 
-# Hibernate/JPA postavke
+# Hibernate
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Logovanje
+# Log
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.security=TRACE
 
-# JWT postavke
+# JWT
 jwt.secret=your_secure_secret_key_here_at_least_32_chars
 jwt.expiration=36000000
