--- a/backend/ft/src/main/resources/application.properties
+++ b/backend/ft/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=ana
 spring.datasource.password=1234
 
 # Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
